# AgentForge

./: .gitignore  .jupyterlab-workspace  =0.11.0  CHANGELOG.md  CLEANUP_SUMMARY.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  PACKAGING_GUIDE.md  PYENV_SETUP.md  QUICKSTART.md  README-package.md  README.md  SUMMARY.md  SYSTEM_VERIFICATION_REPORT.md  TEST_FIXES_SUMMARY.md  app.py  cli.py  deep_researcher.py  demo_async_agents.py  demo_notebook.ipynb  example_usage.py  move_research_files.py  pyenv_setup.sh  pyproject.toml  requirements-core.txt  requirements.txt  setup.py  setup.sh  start_server.py  start_server.sh  test_research.py
agent_creator/: __init__.py
agent_creator/agents/: __init__.py  async_research_agent.py  async_webscraper_agent.py  data_analysis_agent.py  deep_researcher_agent.py  research_agent.py  webscraper_agent.py
agent_creator/core/: __init__.py  agent_bus.py  agent_registry.py  async_agent.py  base_agent.py  content_analysis.py  credibility_assessment.py  pdf_processor.py  research_models.py
agent_creator/utils/: __init__.py  llm_interface.py
deep research/: deep_research_research_Changes_in_software__20250701_043347_20250701_071355.json  deep_research_research_Changes_in_software__20250701_043347_20250701_071355.txt  deep_research_research_Changes_in_software__20250701_043347_20250701_074047.json  deep_research_research_Changes_in_software__20250701_043347_20250701_074047.txt  deep_research_research_Changes_in_software__20250701_043347_20250701_074447.json  deep_research_research_Changes_in_software__20250701_043347_20250701_074447.txt  deep_research_research_Changes_in_software__20250701_043347_20250701_081659.json  deep_research_research_Changes_in_software__20250701_043347_20250701_081659.txt  enhanced_research_report_20250701_075105.txt
deep_research/: __init__.py
deep_researcher/: __init__.py
deep_researcher/cli/: __init__.py  main.py
deep_researcher/core/: __init__.py  analyzer.py  crawler.py  report.py  researcher.py
deep_researcher/models/: __init__.py  data_models.py
deep_researcher/web/: __init__.py  app.py
docs/: AGENT_CREATOR_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  Background agent ideas.md  DOCUMENTATION_INDEX.md  EXAMPLES.md  GETTING_STARTED.md  IMPLEMENTATION_ROADMAP.md  PHASE1_IMPLEMENTATION.md  PROJECT_OVERVIEW.md  README.md  SUGGESTED_FEATURES.md  USAGE.md  agentic_systems_analysis.md
examples/: basic_usage.py  deep_researcher_example.py
tests/: __init__.py  test_content_analysis.py  test_credibility_assessment.py  test_data_analysis_agent.py  test_deep_researcher_agent.py  test_pdf_processor.py  test_research_agent.py  test_research_models.py  test_webscraper_agent.py
