[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-researcher"
version = "1.0.0"
description = "A comprehensive web research tool with recursive crawling capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Deep Research System"}
]
keywords = ["web scraping", "research", "crawling", "duckduckgo", "pdf", "report generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Researchers",
    "Intended Audience :: Information Technology", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "duckduckgo-search>=3.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0", 
    "reportlab>=4.0.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
web = ["streamlit>=1.28.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]
full = [
    "streamlit>=1.28.0",
    "selenium>=4.15.0", 
    "scrapy>=2.11.0",
    "fake-useragent>=1.4.0",
    "fpdf2>=2.7.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
]

[project.scripts]
deep-research = "deep_researcher.cli.main:main"

[project.urls]
Homepage = "https://github.com/your-username/deep-researcher"
"Bug Reports" = "https://github.com/your-username/deep-researcher/issues"
Source = "https://github.com/your-username/deep-researcher"
Documentation = "https://github.com/your-username/deep-researcher/blob/main/README.md"

[tool.setuptools.packages.find]
include = ["deep_researcher*"]

[tool.setuptools.package-data]
deep_researcher = ["*.txt", "*.md"]